# ffmpeg_pull_push

./: CMakeLists.txt  README.md
include/: ffmpeg_capture.hh  ffmpeg_capture.hpp  ffmpeg_metwork_init.hh  ffmpeg_pusher.hh  ffmpeg_pusher.hpp
src/: ffmpeg_capture.cc  ffmpeg_capture.cpp  ffmpeg_metwork_init.cc  ffmpeg_metwork_init.cpp  ffmpeg_pusher.cc  ffmpeg_pusher.cpp  main.cc  main.cpp
